<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.redkale</groupId>
    <artifactId>redkale</artifactId>
    <packaging>jar</packaging>
    <name>RedkaleProject</name>     
    <url>https://redkale.org</url>
    <description>redkale -- java framework</description>
    <version>2.8.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        
        <junit.version>5.9.0</junit.version>
        <maven-jar-plugin.version>3.4.0</maven-jar-plugin.version>
        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>3.2.5</maven-failsafe-plugin.version>
        <spotless-maven-plugin.version>2.43.0</spotless-maven-plugin.version>
        <palantir-java-format.version>2.46.0</palantir-java-format.version>

    </properties>

    <licenses>     
        <license>      
            <name>Apache 2</name>       
            <url>https://www.apache.org/licenses/</url>     
            <distribution>repo</distribution>    
            <comments>Apache License</comments>     
        </license>      
    </licenses>
    
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <repositories>
        <repository>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
    </repositories>
    
    <developers>     
        <developer>      
            <id>Redkale</id>     
            <name>redkale</name>       
            <email>redkale@qq.com</email>  
            <url>https://redkale.org</url>    
            <roles>     
                <role>Project Manager</role>     
                <role>Architect</role>     
            </roles>    
            <organization>redkale</organization>     
            <organizationUrl>https://redkale.org</organizationUrl>       
            <properties>     
                <dept>No</dept>     
            </properties>     
            <timezone>8</timezone>     
        </developer>     
    </developers>  

    <scm>
        <url>https://github.com/redkale/redkale</url>
        <connection>scm:git:git@github.com/redkale/redkale.git</connection>
        <developerConnection>scm:git:git@github.com:redkale/redkale.git</developerConnection>
    </scm>
    
    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>                                               
                <configuration>				
                    <encoding>UTF-8</encoding>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <!--  需要注释掉， 否则会生成native-image配置信息
            <plugin>
                <groupId>org.redkale.maven.plugins</groupId>
                <artifactId>redkale-maven-plugin</artifactId>
                <version>1.1.0</version>                                                
                <executions>
                    <execution>
                        <id>redkale-compile</id> 
                        <phase>process-classes</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>                   
                    </execution>
                </executions>    
            </plugin>
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin.version}</version>
                <configuration>
                    <archive>
                        <addMavenDescriptor>false</addMavenDescriptor>
                        <manifest>
                            <mainClass>org.redkale.boot.Application</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
                    
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <forkMode>once</forkMode>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                </configuration>
            </plugin>
        
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe-plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless-maven-plugin.version}</version>
                <configuration>
                    <lineEndings>UNIX</lineEndings>
                    <formats>
                        <format>
                            <includes>
                                <include>src/**/java/**/*.java</include>
                            </includes>
                            <trimTrailingWhitespace/>
                            <endWithNewline/>
                            <indent>
                                <spaces>true</spaces>
                                <spacesPerTab>4</spacesPerTab>
                            </indent>
                        </format>
                    </formats>
                    <java>
                        <palantirJavaFormat>
                            <version>${palantir-java-format.version}</version>        
                            <style>PALANTIR</style>            
                            <formatJavadoc>true</formatJavadoc> 
                        </palantirJavaFormat>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>apply</goal>
                        </goals>
                        <phase>compile</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    
</project>
